--- a/public/index.html
+++ b/public/index.html
@@ -5,17 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Movie App</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
   </head>
   <body>
     <nav>
-      <h1>Moviest</h1>
+      <h1><i class="bi bi-film"></i>CLASSICSFILL</h1>
       <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/">About</a></li>
         <li><a href="/">Genres</a></li>
+        <li>
+          <a href="/"><i class="bi bi-search"></i></a>
+        </li>
       </ul>
     </nav>
-    <header class="header" id="header"></header>
+    <header class="header" id="header">
+      <div class="header-text">
+        <h1>
+          <i class="bi bi-camera-reels-fill"></i>WATCH YOUR FAVORITES CLASSICS
+          HERE!!
+        </h1>
+        <button id="catalog">Go to catalog</button>
+      </div>
+    </header>
     <div class="movies-container" id="movies-container"></div>
     <script src="index.js"></script>
   </body>
