--- a/public/movie.html
+++ b/public/movie.html
@@ -5,17 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Movie Details</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
   </head>
   <body>
     <nav>
+      <h1><i class="bi bi-film"></i>CLASSICSFILL</h1>
       <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/">About</a></li>
         <li><a href="/">Genres</a></li>
+        <li>
+          <a href="/"><i class="bi bi-search"></i></a>
+        </li>
       </ul>
     </nav>
-    <header class="header" id="header"></header>
-    <div class="movie-container" id="movie-container"></div>
+    <div class="container" id="movie-container"></div>
     <script src="movie.js"></script>
   </body>
 </html>
