Swagger documentation addedw

--- a/public/index.html
+++ b/public/index.html
@@ -15,22 +15,10 @@
       <h1><i class="bi bi-film"></i>CLASSICSFILL</h1>
       <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="/">About</a></li>
-        <li><a href="/">Genres</a></li>
-        <li>
-          <a href="/"><i class="bi bi-search"></i></a>
-        </li>
       </ul>
     </nav>
-    <header class="header" id="header">
-      <div class="header-text">
-        <h1>
-          <i class="bi bi-camera-reels-fill"></i>WATCH YOUR FAVORITES CLASSICS
-          HERE!!
-        </h1>
-        <button id="catalog">Go to catalog</button>
-      </div>
-    </header>
+
+    <header class="header"></header>
     <div class="movies-container" id="movies-container"></div>
     <script src="index.js"></script>
   </body>
